--- a/RankCheck/app/src/main/AndroidManifest.xml
+++ b/RankCheck/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:name=".App"
@@ -14,6 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RankCheck"
         tools:targetApi="31">
+        <activity
+            android:name=".Registration"
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
