--- a/RankCheck/app/src/main/AndroidManifest.xml
+++ b/RankCheck/app/src/main/AndroidManifest.xml
@@ -19,6 +19,12 @@
             android:name=".Registration"
             android:exported="true" />
         <activity
+            android:name=".HomePage"
+            android:exported="true" />
+        <activity
+            android:name=".GamesRV"
+            android:exported="true" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
