nav bar added, not working properly

--- a/RankCheck/app/src/main/AndroidManifest.xml
+++ b/RankCheck/app/src/main/AndroidManifest.xml
@@ -25,12 +25,19 @@
             android:name=".GamesRV"
             android:exported="true" />
         <activity
+            android:name=".LoginPage"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
@@ -38,5 +45,6 @@
             android:name="com.parse.SERVER_URL"
             android:value="@string/back4app_server_url" />
     </application>
+
 
 </manifest>
