simple page up, needs recycler view

--- a/RankCheck/.gitignore
+++ b/RankCheck/.gitignore
@@ -7,6 +7,10 @@
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
+/.idea/codeStyles/codeStyleConfig.xml
+/.idea/codeStyles
+/.idea/codeStyles\Project.xml
+/.idea/misc.xml
 .DS_Store
 /build
 /captures
