--- a/RankCheck/app/build.gradle
+++ b/RankCheck/app/build.gradle
@@ -45,7 +45,7 @@ android {
 }
 
 dependencies {
-
+    implementation 'com.google.android.material:material:1.2.1'
     implementation 'com.github.bumptech.glide:glide:4.13.2'
     implementation 'com.google.code.gson:gson:2.9.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.3'
