--- a/RankCheck/app/src/main/AndroidManifest.xml
+++ b/RankCheck/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RankCheck"
         tools:targetApi="31">
+
         <activity
             android:name=".MainActivity2"
             android:exported="false"
@@ -24,6 +25,9 @@
             android:name=".Registration"
             android:exported="true" />
         <activity
+            android:name=".UserDetail"
+            android:exported="true" />
+        <activity
             android:name=".GamesRV"
             android:exported="true" />
         <activity
@@ -31,7 +35,8 @@
             android:exported="true" />
         <activity
             android:name=".MainActivity"
-            android:exported="true"></activity>
+            android:exported="true"
+            android:windowSoftInputMode="adjustPan"></activity>
         <activity
             android:name=".LoginPage"
             android:exported="true">
